alert suceess on addforum

--- a/client/Views/App/forum/add_forum.html
+++ b/client/Views/App/forum/add_forum.html
@@ -59,6 +59,7 @@
                                     <input type="file" id="upload" style="display: none;" /></label>
                                     <p class="images" style="margin-top:10px;color:red"></p>
                                     <button class="pull-right" id="addPost">{{_"ADD FORUM"}}</button>
+                                    <p class="success" style="margin-top:10px;color:red"></p>
                                 </div>
                             </div>
                         </div><!-- hold-click-each-comment -->
