--- a/client/Views/App/forum/add_forum.html
+++ b/client/Views/App/forum/add_forum.html
@@ -58,8 +58,7 @@
                                      <label>{{_"Choose Image"}}<a href=""><img src="/img/attach-file.png" name="image" id="images"></a>
                                     <input type="file" id="upload" style="display: none;" /></label>
                                     <p class="images" style="margin-top:10px;color:red"></p>
-                                    <button class="pull-right" id="addPost">{{_"ADD FORUM"}}</button>
-                                    <p class="success" style="margin-top:10px;color:red"></p>
+                                    <button class="pull-right successfull" id="addPost">{{_"ADD FORUM"}}</button>
                                 </div>
                             </div>
                         </div><!-- hold-click-each-comment -->
