--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -27,13 +27,13 @@
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="/reward">
-	                            <span class="menu-li-title left-menu">{{_"Rewards & points"}}</span>
+	                        <a href="/member">
+	                            <span class="menu-li-title left-menu">{{_"Member profile"}}</span>
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="/listQuizz">
-	                            <span class="menu-li-title left-menu">{{_"Quizz"}}</span>
+	                        <a href="/reward">
+	                            <span class="menu-li-title left-menu">{{_"Rewards & points"}}</span>
 	                        </a>
 	                    </li>
 	                </ul>
