--- a/client/Views/App/quizz/edit-quizzQA.html
+++ b/client/Views/App/quizz/edit-quizzQA.html
@@ -1,4 +1,4 @@
-<template name="quizzQA">
+<template name="editquizzQA">
 	<article>
     	<div class="wrapper">
 			<div class="main-bg-choose-makeup2">
