--- a/client/Views/App/quizz/listQuizz.html
+++ b/client/Views/App/quizz/listQuizz.html
@@ -9,7 +9,6 @@
 							<div class="panel-heading-quiz">
 								<h3 id="question" class="panel-title">About you</h3>
 							</div>
-
 				            <div id="all_question">
 					            <div class="panel-body bg-quiz1">
 									<div class="col-xs-12">
@@ -170,9 +169,11 @@
 										<div class="col-xs-12 showbutton">
 											<button type="button" class="btn btn-quiz1 btn-block">Suggested</button>
 										</div>
-										<div class="col-xs-12 showbutton">
-											<button type="button" class="btn btn-quiz2 b2 btn-block">Redo the quiz</button>
-										</div>
+										<a href="/editquizzQA/{{_id}}" id="redo">
+											<div class="col-xs-12 showbutton">
+												<button type="button" class="btn btn-quiz2 b2 btn-block">Redo the quiz</button>
+											</div>
+										</a>
 									</div>
 							  	</div>
 							{{else}}
