--- a/client/Views/App/home.html
+++ b/client/Views/App/home.html
@@ -28,7 +28,7 @@
                             {{#with getProduct this}}
                                 <div class="swiper-slide">
                                     <div class="thumbnail">
-                                    <a href="{{pathFor 'details' id=(slug title)}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" width="50" /></a> 
+                                    <a href="{{pathFor 'details' id=(slug title)}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" style="width:170px;height:170px;" /></a> 
                                     <div class="caption"> 
                                         <p class="text-center">{{title}}</p> 
                                         <h3 class="text-center price">{{price}}</h3>
@@ -50,7 +50,7 @@
                            {{#with getProduct this}}
                                 <div class="swiper-slide">
                                     <div class="thumbnail">
-                                        <a href="{{pathFor 'details' id=(slug title)}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" width="50" /> </a>
+                                        <a href="{{pathFor 'details' id=(slug title)}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" wstyle="width:170px;height:170px;" /> </a>
                                         <div class="caption"> 
                                             <p class="text-center">{{title}}</p> 
                                             <h3 class="text-center price">{{price}}</h3>
@@ -72,7 +72,7 @@
                             {{#with getProduct this}}
                                 <div class="swiper-slide">
                                     <div class="thumbnail">
-                                        <a href="details/{{slug title}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" width="50" /> </a>
+                                        <a href="details/{{slug title}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" style="width:170px;height:170px;" /> </a>
                                         <div class="caption">
                                             <p class="text-center">{{title}}</p> 
                                             <h3 class="text-center price">{{price}}</h3>
