--- a/client/Views/App/home.html
+++ b/client/Views/App/home.html
@@ -9,6 +9,13 @@
                 <a href="{{url}}"><img src="{{getImg imageId}}"></a>
             </div>
         {{/each}}
+        <!-- {{#each getbanner}}
+            <div data-p="225.00" style="display: none;">
+              <a href="{{url}}">
+                <img data-u="image" src="{{getImg imageId}}" alt="slide"/>
+              </a> 
+            </div>
+        {{/each}} -->
             
         </div>
       <!--<div class="swiper-pagination"></div>
