--- a/client/Views/App/banner/banner.html
+++ b/client/Views/App/banner/banner.html
@@ -51,9 +51,9 @@
 							<div class="form-group">
 								<label class="control-label col-sm-4" for="title">Image<span style="color:red">*</span></label>
 								<div class="col-sm-8">
-									<input type="file"  name="file" id="file" value="" class="form-control input-sm" placeholder="banner"  >
+									<input type="file"  name="file" id="file" value="" class="form-control input-sm" placeholder="banner" style="height: 15%;">
 									<div class="col-md-12">
-										<span>Height:<strong>1300px </strong></span>
+										<span><br>Height:<strong>1300px </strong></span>
 										<span>Width:<strong>620px</strong></span>
 									</div>
 									{{#if imageId}}
@@ -108,16 +108,7 @@
 										
 									</tr>
 									{{/each}}
-									<!-- {{#each listShop}}
-									<tr>
-										<td>{{Image}}</td>
-										<td>{{URL}}</td>
-										
-										<td><a class="glyphicon glyphicon-trash center-block" href="" id="remove"></a></td>
-										<td><a class="glyphicon glyphicon-edit center-block" href="updateshop/{{_id}}"></a></td>
-										<td><a class="glyphicon glyphicon-text-background center-block" href="transleshops/{{_id}}"></a></td>
-									</tr>
-									{{/each}} -->
+									
 								</tbody>
 							</table>
 						</div>
