--- a/client/Views/App/product/checkout.html
+++ b/client/Views/App/product/checkout.html
@@ -1,6 +1,6 @@
 <template name="checkout">
 	<section class="checkout" dir="{{getDirection}}">
-    	<div class="wrapper-checkout">
+    	<div class="wrapper-checkout wrapper-notfound">
             <div class="row">
 				<div class="col-xs-12">
 					<div class="panel panel-default">
