--- a/client/Views/App/product/listproducts.html
+++ b/client/Views/App/product/listproducts.html
@@ -3,7 +3,7 @@
         {{> menu}}
     </section> <!-- #refine menu -->
     <article>
-        <div class="wrapper">
+        <div class="wrapper wrapper-notfound">
             <p class="text-selling-top">{{nbproducts}}/{{totalProducts}} {{_ "products result"}}</p>
             <a href="#" id="bestSelling" style="color:black;"><span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Best selling"}}</span></a>
             <a href="#" class="text-selling-second" id="name" style="color:black;"> <span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Sort Name"}} </span></a>
