get new version

--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -2,7 +2,7 @@
     <section id="refine_menu">
       {{> menu}}
     </section> <!-- #refine menu -->
-    
+
     <article dir="{{getDirection}}">
         <section class="shadow_bottom">
           <div class="wrapper">
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="hold_product_detail">
           <div class="col-md-12">
-            <h1>{{_"RELATED PRODUCTS"}}</h1>
+            <h3 style="color: black;">{{_"RELATED PRODUCTS"}}</h3>
           </div>
           <div class="row"></div> 
           {{>recommendation}}
