--- a/client/Views/App/login/login.html
+++ b/client/Views/App/login/login.html
@@ -6,9 +6,9 @@
                     <div class="form-login" dir="{{getDirection}}">
                         <div class="text-center btn-re-log">
                             <ul class="list-inline">
-                                <li><a href="/login"><button class="btn btn-log-white">{{_ "Login"}}</button></a></li>
+                                <li><a href="/login"><button class="btn btn-log">{{_ "Login"}}</button></a></li>
                                 <li>{{_ "Or"}}</li>
-                                <li><a href="/register"><button class="btn btn-register">{{_ "Register"}}</button></a></li>
+                                <li><a href="/register"><button class="btn btn-register-white">{{_ "Register"}}</button></a></li>
                             </ul>
                         </div>
                         <form class="form-horizontal mar-log" id="UserLogin">
