--- a/client/Views/App/login/register.html
+++ b/client/Views/App/login/register.html
@@ -11,9 +11,9 @@
 	                        </div> -->
 	                        <div class="text-center btn-re-log">
 	                            <ul class="list-inline">
-	                                <li><a href="/login"><button class="btn btn-log">{{_ "Login"}}</button></a></li>
+	                                <li><a href="/login"><button class="btn btn-log-white">{{_ "Login"}}</button></a></li>
 	                                <li>{{_ "Or"}}</li>
-	                                <li><a href="/register"><button class="btn btn-register-white">{{_ "Register"}}</button></a></li>
+	                                <li><a href="/register"><button class="btn btn-register">{{_ "Register"}}</button></a></li>
 	                            </ul>
 	                        </div>
 	                        <form class="control-group">
