--- a/client/Views/App/contents/webzineDetail.html
+++ b/client/Views/App/contents/webzineDetail.html
@@ -6,7 +6,7 @@
           </div>
           {{#with getFirstImgContent _id}}
           <div class="space-img">
-              <img src="img/man-img.png" class="img-responsive">
+              <img src="{{getImg this}}" class="center-block img-responsive" width="500" height="200" alt="{{title}}">
           </div>
           {{/with}}
           <div class="col-xs-12">
