--- a/client/Views/App/contents/webzine.html
+++ b/client/Views/App/contents/webzine.html
@@ -14,7 +14,7 @@
                 <div class="space-img">
                     <a href="/webzinedetails/{{slug title}}"> 
                     {{#with getFirstImgContent _id}}
-                    <img src="{{getImg imageId}}" class="img-responsive">
+                    <img src="{{getImg this}}" class="img-responsive">
                     {{/with}}
                     </a>
                 </div>
