--- a/client/Views/App/mainLayout.html
+++ b/client/Views/App/mainLayout.html
@@ -11,7 +11,7 @@
                     <a href="/"><h1><img src="/img/icons/logo-01.png" /></h1></a>
                 </div>
                 <div id="header-right">
-                    <a href="#" id="a-sidebar">REFINE</a>
+                    <a href="#" id="a-sidebar">{{_"REFINE"}}</a>
                     <div class="header_top_right pull-left">
                         <ul class="nav nav-pills">
                             <li><a href="#" id="en" style="background: none !important;">{{changeLanguage}}</a></li>
