--- a/client/Views/App/menu.html
+++ b/client/Views/App/menu.html
@@ -1,59 +1,61 @@
 <template name="menu">
 	<div class="col-xs-12">
-        <div class="hold_refine">
-            <ul class="refine_menu list-inline">
-             <li class="active">
-                 <a href="{{pathFor 'listing' id=(slug title)}}"><label id="makeup"></label> <i class="fa fa-caret-down"></i></a>
-             </li>
-             <li>
-              <a href="{{pathFor 'listing' id=(slug title)}}"><label id="all_makeup"></label> <i class="fa fa-caret-down"></i></a>
-             </li>
-                <li>
-                 <a href="{{pathFor 'listing' id=(slug title)}}"><label id="secondChild"></label><i class="fa fa-caret-down"></i></a>
-                </li>
-            </ul>
-            <div id="panel_makeup">
-	            <ul class="make-up">
-	            	{{#each getParent}}
-	                <li id="child_makeup"><a href="{{pathFor 'listing' id=(slug title)}}">{{title}}</a>
-	                </li>
-	            	{{/each}}
-	            </ul>
-            </div>
-            <div id="panel_all_makeup" style="display: none;">
-	            <div class="row">
-	            	<div class="u-vmenu">
+		<div class="hold_refine">
+			<ul class="refine_menu list-inline">
+				<!-- {{#each getParent}} -->
+				<li class="active">
+					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="makeup"></label> <i class="fa fa-caret-down"></i></a>
+				</li>
+				<li>
+					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="all_makeup"></label> <i class="fa fa-caret-down"></i></a>
+				</li>
+				<li>
+					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="secondChild"></label><i class="fa fa-caret-down"></i></a>
+				</li>
+
+			</ul>
+			<div id="panel_makeup">
+				<ul class="make-up">
+					{{#each getParent}}
+					<li id="child_makeup"><a href="{{pathFor 'listing' id=(slug title)}}">{{title}}</a>
+					</li>
+					{{/each}}
+				</ul>
+			</div>
+			<div id="panel_all_makeup" style="display: none;">
+				<div class="row">
+					<div class="u-vmenu">
 						<ul>
 							<li><a href="{{pathFor 'listing' id=(slug title)}}" id="allCategory"> </a></li>
-						{{#with getParent}}
+							{{#with getParent}}
 							{{#each getChildren _id}}
 							<li id="child_child">
 								<a href="{{pathFor 'listing' id=(slug title)}}" id="childChild">{{title}}</a>
 							</li>
 							{{/each}}
-						{{/with}}
+							{{/with}}
 						</ul>
 						
 					</div>
-	            </div>
-            </div>
-             <div id="second_makeup" style="display: none;">
-	            <div class="row">
-	            	<div class="u-vmenu">
+				</div>
+			</div>
+			<div id="second_makeup" style="display: none;">
+				<div class="row">
+					<div class="u-vmenu">
 						<ul>
 							<li><a href="{{pathFor 'listing' id=(slug title)}}" id="allCategory"> </a></li>
-						{{#with getParent getChildren _id}}
-								{{#each getFirstChild _id}}
-								<li id="second_child">
-									<a href="{{pathFor 'listing' id=(slug title)}}">{{title}}</a>
-								</li>
-								{{/each}}
-						{{/with}}
+							{{#with getParent getChildren _id}}
+							{{#each getFirstChild _id}}
+							<li id="second_child">
+								<a href="{{pathFor 'listing' id=(slug title)}}">{{title}}</a>
+							</li>
+							{{/each}}
+							{{/with}}
 						</ul>
 						
 					</div>
-	            </div>
-            </div>
-        </div>
-    </div>
+				</div>
+			</div>
+		</div>
+	</div>
 </template>
