--- a/client/Views/App/menu.html
+++ b/client/Views/App/menu.html
@@ -2,17 +2,19 @@
 	<div class="col-xs-12">
 		<div class="hold_refine">
 			<ul class="refine_menu list-inline">
-				<!-- {{#each getParent}} -->
 				<li class="active">
-					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="makeup"></label> <i class="fa fa-caret-down"></i></a>
+					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="makeup"></label> <i class="fa fa-caret-down"></i>{{title}}</a>
 				</li>
+				{{#if navnodisplay}}
 				<li>
 					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="all_makeup"></label> <i class="fa fa-caret-down"></i></a>
 				</li>
+				
 				<li>
-					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="secondChild"></label><i class="fa fa-caret-down"></i></a>
+					<a style="display:none;" id="caret-sreydent" href="{{pathFor 'listing' id=(slug title)}}"><label id="secondChild"></label><i  class="fa fa-caret-down"></i></a>
 				</li>
-
+			
+				{{/if}}
 			</ul>
 			<div id="panel_makeup">
 				<ul class="make-up">
@@ -58,4 +60,7 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+
+	</script>
 </template>
