--- a/client/Views/App/product/manage_product.html
+++ b/client/Views/App/product/manage_product.html
@@ -2,7 +2,7 @@
 <template name="manageproduct">
 	<div id="wrapper">
 		<div id="page-wrapper">
-			<div class="container-fluid">
+			<div class="container">
 				<!-- Page Heading -->
 				<div class="row">
 
