--- a/client/Views/App/contents/webzine.html
+++ b/client/Views/App/contents/webzine.html
@@ -10,7 +10,7 @@
     <!-- start container -->
 	<article> 
             {{#each webzinelists}}
-        	<div class="wrapper" style="padding-top: 5px;" dir="{{getDirection}}">
+        	<div class="wrapper wrapper-notfound" style="padding-top: 5px;" dir="{{getDirection}}">
                 <div class="space-img">
                     <a href="/webzinedetails/{{slug title}}"> 
                     {{#with getFirstImgContent _id}}
