--- a/client/Views/App/contents/webzineDetail.html
+++ b/client/Views/App/contents/webzineDetail.html
@@ -1,6 +1,6 @@
 <template name="webzinedetails">
 	<article>
-    	<div class="wrapper" style="margin-top: 50px;" dir="{{getDirection}}">
+    	<div class="wrapper wrapper-notfound" style="margin-top: 50px;" dir="{{getDirection}}">
           <div class="title-webzin-mobile">
               <h2>{{title}}</h2>
           </div>
