--- a/client/Views/App/forum/list_forum.html
+++ b/client/Views/App/forum/list_forum.html
@@ -23,7 +23,7 @@
             </div>
         </section>
         <section class="shadow_bottom" dir="{{getDirection}}">
-          <div class="wrapper">
+          <div class="wrapper wrapper-notfound">
                 <div class="row">
                     <div class="col-xs-12">
                         <h4 id="cate">{{_ "List All Forums"}}</h4>
