--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -1,7 +1,7 @@
 <template name="tutodetails">
 	<article>
         <section>
-        	<div class="wrapper">
+        	<div class="wrapper wrapper-notfound">
                 <div class="row">
                 {{#with getTutodetails _id}}
 					<div class="col-xs-12">
