--- a/client/Views/App/tuto/tutolisting.html
+++ b/client/Views/App/tuto/tutolisting.html
@@ -1,7 +1,7 @@
 <template name="tutolisting">
 	<article>
 	    <section class="shadow_bottom">
-	    	<div class="wrapper">
+	    	<div class="wrapper wrapper-notfound">
 	            <div class="row">
 	             {{#each getContent _id}}
 					<div class="col-xs-12">
