--- a/client/Views/App/search/searchproduct.html
+++ b/client/Views/App/search/searchproduct.html
@@ -4,7 +4,7 @@
     </section> <!-- #refine menu -->
 {{#if displayproduct}}
 	 <article>
-        <div class="wrapper">
+        <div class="wrapper wrapper-notfound">
             <p class="text-selling-top">{{nbproducts}}/{{totalProducts}} {{_ "products result"}}</p>
 
             <p class="text-selling-second">{{_ "Best selling"}} <a href=""><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a></p>
