--- a/client/Views/App/home.html
+++ b/client/Views/App/home.html
@@ -37,7 +37,7 @@
                                     <div class="thumbnail">
                                     <a href="{{pathFor 'details' id=(slug title)}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" style="width:170px;height:170px;" /></a> 
                                     <div class="caption"> 
-                                        <p class="text-center">{{title}}</p> 
+                                        <p class="text-center">{{smaller title 7}}</p> 
                                         <h3 class="text-center price">{{price}}</h3>
                                     </div>
                                     </div>
@@ -59,7 +59,7 @@
                                     <div class="thumbnail">
                                         <a href="{{pathFor 'details' id=(slug title)}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" wstyle="width:170px;height:170px;" /> </a>
                                         <div class="caption"> 
-                                            <p class="text-center">{{title}}</p> 
+                                            <p class="text-center">{{smaller title 7}}</p> 
                                             <h3 class="text-center price">{{price}}</h3>
                                         </div>
                                     </div>
@@ -81,7 +81,7 @@
                                     <div class="thumbnail">
                                         <a href="details/{{slug title}}"><img data-holder-rendered="true" src="{{getImgForProduct _id}}" data-src="holder.js/100%x200" alt="100%x200" class="img-circle" style="width:170px;height:170px;" /> </a>
                                         <div class="caption">
-                                            <p class="text-center">{{title}}</p> 
+                                            <p class="text-center">{{smaller title 7}}</p> 
                                             <h3 class="text-center price">{{price}}</h3>
                                         </div>
                                     </div>
