--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -15,7 +15,7 @@
 	                <a href="#">
 	                    <span class="menu-li-title">{{_"Profile"}}</span>
 	                </a>
-	                <ul id="submenu-1" style="display: none;">
+	                <ul id="submenu-1" class="disnone">
 	                    <li>
 	                        <a href="/profile">
 	                            <span class="menu-li-title left-menu">{{_"My Profile"}}</span>
