--- a/client/Views/App/contents/webzineDetail.html
+++ b/client/Views/App/contents/webzineDetail.html
@@ -19,4 +19,63 @@
           </div>
       </div>
     </article>
+
+        <section class="shadow_bottom">
+          <div class="wrapper">
+            <div class="row">
+             <div class="col-sm-12">
+              <div class="col-md-6 pull-left space-top-detail2">
+               <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
+               <h4 class="bold text-center">{{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h4>
+             </div>
+
+           </div>
+         </div>
+         {{#if currentUser}}
+         <div class="col-sm-12">
+          <div class="space-comment box">
+            <input id="title" type="text" class="form-control" placeholder="{{_"Title"}}..." required/>
+            <textarea class="form-control" id="comment" name="styled-textarea" onfocus="this.value='';" rows="7">{{_"Write what you want"}}</textarea>
+          </div>
+          <button class="btn_register pull-right" id="addreview">{{_ "SEND"}}</button>
+        </div>
+        {{/if}}
+        <div class="clear-fix"></div>
+       {{#each getReviewBySort review}}
+        <div class="row">
+         <div class="col-sm-12">
+          <div class="col-sm-5 pull-left space-top-detail2">
+            <img src="{{getImages user}}" class="img-responsive center-block image{{user}}" style="width:50%;">
+           <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
+          </div>
+          <div class="pull-left space-top-detail3" >
+            <h2>{{comment}}</h2>
+            <p class="no-margin">{{getDate date}}</p>
+          </div>
+          <div class="col-sm-2 pull-right space-top-detail2">
+          <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> --> 
+         </div>
+         <div class="col-sm-12">
+           <p class="col-sm-5 pull-left space-top-detail2">{{title}}</p>
+           <div class="pull-left border-detail">   
+           </div>
+         </div>
+       </div>  
+     </div>
+
+     {{/each}} 
+    </div>
+    </section>
+     <section id="forum_question" dir="{{getDirection}}">
+      <div class="container">
+        <div class="hold_product_detail">
+          <div class="col-md-12">
+            <h3 style="color: black;">{{_"RELATED PRODUCTS"}}</h3>
+          </div>
+          <div class="row"></div> 
+          {{>recommendation}}
+        </div>
+      </div>
+      <br/><br /><br/>
+    </section>
 </template>
