--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -15,6 +15,7 @@
               <div class="main_color">
                 <div>
                   <p class="toggle">{{name}} :</p>
+
                   <div style="display: none;" class="bg-white">
                     <ul class="list-inline">
                       {{#each getAllAttributes ../product _id}}              
@@ -48,6 +49,7 @@
                   <div class="col-xs-12">
                     <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
                     <h2 class="pull-right">{{selected_price}} تومان</h2>
+                    
                   </div>
                 </div>
               </div>
@@ -83,29 +85,27 @@
         </div>
         {{/if}}
         <div class="clear-fix"></div>
-        {{#each getReviews review filterReview removeFilter}}
+      {{#each getReviewBySort review}}
         <div class="row">
          <div class="col-sm-12">
           <div class="col-sm-5 pull-left space-top-detail2">
             <img src="{{getImages user}}" class="img-responsive center-block image{{user}}" style="width:50%;">
-            <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
+           <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
           </div>
-          <div class="col-sm-5 pull-left space-top-detail2">
-            <h2>{{title}}</h2>
+          <div class="pull-left space-top-detail3" >
+            <h2>{{comment}}</h2>
             <p class="no-margin">{{getDate date}}</p>
-            <p class="no-margin">{{getTime date}}</p>
           </div>
           <div class="col-sm-2 pull-right space-top-detail2">
-           <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> 
+          <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> --> 
          </div>
          <div class="col-sm-12">
-           <p class="pull-left space-top-detail3">{{comment}}</p>
+           <p class="col-sm-5 pull-left space-top-detail2">{{title}}</p>
            <div class="pull-left border-detail">   
            </div>
          </div>
        </div>  
      </div>
-
      {{/each}} 
     </div>
     </section>
@@ -120,7 +120,7 @@
           {{>recommendation}}
         </div>
       </div>
-      <br/><br /><br/>
+      <br/><br/><br />
     </section>
 
 </article>
