--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -28,36 +28,34 @@
 							</div>
 						</form>
 						<a href="" class="pull-right">
-							<span class="span-send" id="addreview">SEND</span>
+							<span class="span-send" id="addreview">{{_"SEND"}}</span>
 						</a>
 					</div> <!-- col-xs-12 -->
 				{{/if}}
 					<div class="clearfix"></div>
 				{{#each getReviewBySort review}}
-					<div class="col-xs-12">
-						<div class="hold-tuto-send">
-							<div class="col-xs-12">
-								<div class="row">
-									<div class="col-xs-7">
-										<img src="{{getImg currentUser.image}}" class="img-responsive">
-									</div>
-									<div class="col-xs-5">
-										<div class="control-name-detail">
-											<p class="name-tuto-send">{{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</p>
-											<p class="date-tuto-send">{{getDate date}}</p>
-											<p class="time-tuto-send">{{getTime date}}</p>
-										</div>
-									</div>
-									<div class="col-xs-12">
-										<p class="description-tuto-comment">{{comment}}</p>
-										
-									</div> <!-- col-xs-12 -->
-									<hr class="tuto-hr-comment">
-								</div>
-							</div>
-						</div> <!-- hold-tuto -->
-					</div> <!-- col-xs-12 -->
-				{{/each}}
+			        <div class="row">
+			         <div class="col-sm-12">
+			          <div class="col-sm-5 pull-left space-top-detail2">
+			            <img src="{{getImages user}}" class="img-responsive center-block image{{user}}" style="width:50%;">
+			           <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
+			          </div>
+			          <div class="pull-left space-top-detail3" >
+			            <h2>{{comment}}</h2>
+			            <p class="no-margin">{{getDate date}}</p>
+			          </div>
+			          <div class="col-sm-2 pull-right space-top-detail2">
+			          <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> --> 
+			         </div>
+			         <div class="col-sm-12">
+			           <p class="col-sm-5 pull-left space-top-detail2">{{title}}</p>
+			           <div class="pull-left border-detail">   
+			           </div>
+			         </div>
+			       </div>  
+			     </div>
+
+			     {{/each}} 
 					<div class="clearfix"></div>
 				</div> <!-- row -->
             </div>
