--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -15,25 +15,25 @@
 	                <a href="#">
 	                    <span class="menu-li-title">{{_"Profile"}}</span>
 	                </a>
-	                <ul id="submenu-1" class="disnone">
+	                <ul id="submenu-1" class="disnone" style="padding-right:40px;">
 	                    <li>
 	                        <a href="/profile">
-	                            <span class="menu-li-title left-menu">{{_"My Profile"}}</span>
+	                            <span class="menu-li-title left-menu padd">{{_"My Profile"}}</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/member">
-	                            <span class="menu-li-title left-menu">{{_"Member profile"}}</span>
+	                            <span class="menu-li-title left-menu padd">{{_"Member profile"}}</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/member">
-	                            <span class="menu-li-title left-menu">{{_"Member profile"}}</span>
+	                            <span class="menu-li-title left-menu padd">{{_"Member profile"}}</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/reward">
-	                            <span class="menu-li-title left-menu">{{_"Rewards & points"}}</span>
+	                            <span class="menu-li-title left-menu padd">{{_"Rewards & points"}}</span>
 	                        </a>
 	                    </li>
 	                </ul>
