--- a/client/Views/App/forum/detail_forum.html
+++ b/client/Views/App/forum/detail_forum.html
@@ -17,7 +17,7 @@
                                 <div class="col-xs-3">
                                     {{#with getProfile userId}}
                                         {{#if image}}
-                                            <img src="{getImg image}}" class="">
+                                            <img src="{{getImg image}}" class="">
                                         {{else}}
                                             <img src="/img/menu1.png" class="">
                                         {{/if}}
