--- a/client/Views/App/forum/list_forum.html
+++ b/client/Views/App/forum/list_forum.html
@@ -35,7 +35,7 @@
                                         {{#with getprofile this.userId}}
                                             {{#if image}}
                                                 <div class="col-xs-3">
-                                                    <img src="{getImg image}}" class="">
+                                                    <img src="{{getImg image}}" class="">
                                                 </div>
                                             {{else}}
                                                 <div class="col-xs-3">
