--- a/client/Views/App/contents/webzineDetail.html
+++ b/client/Views/App/contents/webzineDetail.html
@@ -72,8 +72,17 @@
           <div class="col-md-12">
             <h3 style="color: black;">{{_"RELATED PRODUCTS"}}</h3>
           </div>
-          <div class="row"></div> 
-          {{>recommendation}}
+          <div class="row">
+            {{#each productwebzine}}
+            <div class="col-md-3">
+             <a href="/details/{{slug title}}" title="{{title}}"> <img id="loads" style="border:8px solid #000" src="{{getImgForProduct _id}}" class="img-circle center-block" alt="{{title}}" width="150" height="150"></a>
+            <p class="text-center" style="font-size:12px; height:40px;font-weight:lighter;"><a href="/details/{{slug title}}" class="linkrecommendation">{{title}}</a></p>
+            <h3 class="text-center" style="font-weight:bold;color:#000;"><a href="/details/{{slug title}}" class="linkrecommendation">{{price}}</a></h3>
+            </div>
+            {{/each}}
+          </div> 
+          <!-- {{>recommendation}} -->
+
         </div>
       </div>
       <br/><br /><br/>
