change error page home

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -153,9 +153,9 @@
 		</div>
    	</section> <!-- #sidebar-wrapper -->
 	<script type="text/javascript">
-    	$(function(){
-		    $('#sl2').slider();     
-		});
+  //   	$(function(){
+		//     $('#sl2').slider();     
+		// });
     </script>
    <!--  <script>
     $(window).load(function(){
