--- a/client/Views/App/login/resetpassword.html
+++ b/client/Views/App/login/resetpassword.html
@@ -1,4 +1,4 @@
-<template name="ResetPassword">
+<!-- <template name="ResetPassword">
     <div class="container">
         <form role="form">
 
@@ -12,5 +12,5 @@
             </div>
         </form>
     </div>
-    <!-- end #reset-password-form -->
-</template>
+    <!-- end #reset-password-form 
+</template> -->
