translate comfirmorder2 button

--- a/client/Views/App/product/confirmorder2.html
+++ b/client/Views/App/product/confirmorder2.html
@@ -16,7 +16,7 @@
     <input type='hidden' id='MID' name='MID' value='10443844'> <!-- شماره مشتری بانک سامان -->
     <input type='hidden' id='ResNum' name='ResNum' value='{{resNum}}'> <!-- شماره فاکتور -->
     <input type='hidden' id='RedirectURL' name='RedirectURL' value='http://54.152.226.45/confirm.php'> <!-- آدرس بازگشت -->
-    <input type="submit" value='پرداخت' id="btnUpdate" class="btn-sm btn-primary btn-block" style="background:#3276b1; box-show:0px; border-radius:0px; border:0px;   margin: 72px 0px 0px -117px !important; width: 29%;">
+    <input type="submit" value='{{_"Pay"}}' id="btnUpdate" class="btn-sm btn-primary btn-block" style="background:#3276b1; box-show:0px; border-radius:0px; border:0px;   margin: 72px 0px 0px -117px !important; width: 29%;">
 </form>
 			
 		</div>
