--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -95,14 +95,14 @@
            <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
           </div>
           <div class="pull-left space-top-detail3" >
-            <h2>{{comment}}</h2>
+            <h3>{{comment}}</h3>
             <p class="no-margin">{{getDate date}}</p>
           </div>
           <div class="col-sm-2 pull-right space-top-detail2">
           <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> --> 
          </div>
          <div class="col-sm-12">
-           <p class="col-sm-5 pull-left space-top-detail2">{{title}}</p>
+           <h3 class="col-sm-5 pull-left space-top-detail2">{{title}}</h3>
            <div class="pull-left border-detail">   
            </div>
          </div>
