--- a/client/Views/App/Reward/page-reward.html
+++ b/client/Views/App/Reward/page-reward.html
@@ -1,165 +1,62 @@
-<template name="pagereward">
-	<div class="container" style="padding-top:30px;">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <a href="/profile">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    	<h3 class="my1h3">MY SAFIR PROFIL</h3>
-                    </div>
-                </a>
-                <a href="membermengold">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    	<h3 class="my1h3">MEMBER PROFIL</h3>
-                    </div>
-                </a>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                	<h3 class="my1h3 backre">REWARDS & POINT</h3>
-                </div>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mept">
-
-            	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mept1">
-                	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 backpt">
-                    {{#each getpoint}}
-                        {{#with profile}}
-                	       <h1 class="text-right">{{shipcard.point}} pt</h1>
-                           <input type="hidden" value="{{shipcard.point}}" 
-                           id="point">
-                        {{/with}}
-                    {{/each}}
-                    </div>
-                </div>
-                
-            </div>
-
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rewards">
-            	<h3>REWARDS / HOW TO EARN MORE POINTS</h3>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rewards1">
-            	<div id="konrewards">
-                	<h3>REWARDS</h3>
-                </div>
-            </div>
-            <!--Start product-->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" align="center">
-            	{{#each getproduct}}
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product">
-                    	<img src="upload/{{getImage image}}" width="200" height="200">
-                        <h3>
-                        	{{title}}
-                        </h3>
-                        <h1>{{point}} pt</h1>
-                    </div>
-                {{/each}}
-            </div>
-            <!--End product-->
-             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 boderproduct">
-             	<div class="filter">
-
-                    <script type="text/javascript">
-                      $('#filter_slider_price').slider().on('slide', function(ev) { $('#filter_text_price').val(ev.value); });
-                    </script>
-                    </div>
-
-                    <form class="form_filter"></form>
-                     <fieldset class="filter"></fieldset>
-                      <input type="range" id="range1" class="filter_slider"/>
-                      
-             </div>
-             
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rewards1">
-            	<div id="konrewards">
-                	<h3>HOW TO EARN MORE POINTS</h3>
-                </div>
-             </div>
-             <!--Start hover points-->
-             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
-            	<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product maginbotom">
-                	
-                    <a href="#"><img src="images/pro3.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro3.png'" class="img-responsive"></a>
-
-                    <h3>
-                    	get points by visiting to the site<br/>
-                        (extra points : visit 5 times a week)
-                        
-                    </h3>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product maginbotom">
-                	<a href="#"><img src="images/pro4.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro4.png'" class="img-responsive"></a>
-                     <h3>
-                    	extra points<br/>
-                        on a specific day
-                    </h3>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product">
-                	<a href="#"><img src="images/pro5.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro5.png'" class="img-responsive"></a>
-                     <h3>
-                    	extra points<br/>
-                        for a specific product
-                    </h3>
-                </div>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
-            	<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product maginbotom">
-                	<a href="#"><img src="images/pro6.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro6.png'" class="img-responsive"></a>
-                    <h3>
-                    	extra points<br/>
-                        for watching tutorials (blu CIGS)
-                    </h3>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product maginbotom">
-                	<a href="#"><img src="images/pro7.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro7.png'" class="img-responsive"></a>
-                     <h3>
-                    	extra points<br/>
-                        when shopping online
-                    </h3>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product">
-                	<a href="#"><img src="images/pro8.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro8.png'" class="img-responsive"></a>
-                     <h3>
-                    	extra points<br/>
-                        for sharing Sfir perfumery
-                    </h3>
-                </div>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
-            	<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product maginbotom">
-                	<a href="#"><img src="images/pro9.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro9.png'" class="img-responsive"></a>
-                    <h3>
-                    	extra points<br/>
-                        for like the page
-                    </h3>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product maginbotom">
-                	<a href="#"><img src="images/pro10.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro10.png'" class="img-responsive"></a>
-                     <h3>
-                    	Referrals : write a mail to your friend
-                        
-                    </h3>
-                    <form style="padding:20px;">
-                    	<input type="text" name="text" value="">
-                        <input id="submite" type="submit" value="SEND">
-                    </form>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product">
-                	<a href="#"><img src="images/pro7.png" onmouseover="this.src='images/point.png'" 
-                    onmouseout="this.src='images/pro7.png'" class="img-responsive"></a>
-                    <h3>
-                        extra points For comment
-                    </h3>
-                </div>
-            </div>
-            <!--End pro points-->
-        </div>
-        <!--End row -->
-    </div>
+<template name="reward">
+	<article>
+		<section>
+			<div class="wrapper">
+				<div class="row">
+					<div class="text-right">{{getpoint}} pt</div>
+				<div class="col-xs-12">
+					<h4 class="text-center">{{_"REWARDS / HOW TO EARN MORE POINTS"}}</h4>
+				</div>
+			    </div>
+			</div>
+			<div class="row">
+				<div class="bg_title">
+					<h4 class="small_reward text-right">{{_"REWARDS"}}</h4>
+				</div>
+			</div>
+						
+			<div class="row">
+				<div class="row_img">
+					{{#each getproductreward point}}
+						<div class="col-xs-4">
+							<div style="height:130px;overflow: hidden;">
+								<a href="#"><img src="{{getImg image}}" class="center-block img-responsive img-circle"></a>
+							</div>
+							<div class="text-center">
+								<div style="height:50px;overflow: hidden;">
+									<p class="text_img">{{title}}</p>
+								</div>
+								<h4 class="title_reward">{{getpoint}} pt</h4>
+							</div>
+						</div>
+					{{/each}}
+				</div>
+			</div>
+			
+			
+			<div class="row">
+				<div class="bg_title">
+					<h4 class="small_reward text-right">{{_"HOW TO EARN MORE POINTS"}}</h4>
+				</div>
+			</div>
+			
+			<!-- <div class="row">
+				<div class="row_img">
+					<div class="col-xs-6">
+						<a href="#"><img src="img/img_reward4.png" class="center-block img-responsive img-circle"></a>
+					</div>
+					<div class="col-xs-6">
+						<a href="#"><img src="img/img_reward3.png" class="center-block img-responsive img-circle"></a>
+					</div>
+				</div>
+			</div> -->
+			<div class="swiper-container">
+			    <div class="swiper-wrapper text-center">
+			        <div class="swiper-slide" data-hash="slide1"><img src="img/img_reward4.png"></div>
+			        <div class="swiper-slide" data-hash="slide2"><img src="img/img_reward3.png"></div>
+			    </div>
+			</div>
+			
+		</section>
+    </article>
 </template>
