if no product result not display sort

--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -59,6 +59,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- add social network -->
+                <div class="social_share">
+                    <div class="text-center">
+                        <a style="color: rgb(138, 138, 138);" class="fa fa-facebook social-icon" href="https://www.facebook.com/safirperfumery" target="_blank"></a>
+                        <a class="fa fa-instagram social-icon" href="http://www.instagram.com/safirstores" id="insta" target="_blank"></a>
+                        <a style="padding-left:2px;color: rgb(138, 138, 138);" class="fa fa-twitter social-icon" href="https://twitter.com/safirperfumery" target="_blank"></a>
+                        <a class="fa fa-google-plus social-icon" href="https://plus.google.com/u/0/b/109953347025842075900/+Safirperfumeryofficial/posts" target="_blank"></a>
+                    </div>
+                </div>
+                <!-- end -->
             </div>
         </section>
         <section class="shadow_bottom">
@@ -122,4 +132,5 @@
             <br />
         </section>
     </article>
+
 </template>
